@@ -1,8 +1,7 @@
 package be.kdg.prog6.restaurant.adaptor.out.restaurant;
 
 import be.kdg.prog6.restaurant.domain.Restaurant;
-import be.kdg.prog6.restaurant.domain.vo.restaurant.OwnerId;
-import be.kdg.prog6.restaurant.domain.vo.restaurant.Picture;
+import be.kdg.prog6.restaurant.domain.vo.restaurant.*;
 import be.kdg.prog6.restaurant.port.out.LoadRestaurantPort;
 import be.kdg.prog6.restaurant.port.out.UpdateRestaurantPort;
 import org.slf4j.Logger;
@@ -10,6 +9,8 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Repository;
 
 import java.util.Optional;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Repository
 public class RestaurantJpaAdaptor implements UpdateRestaurantPort, LoadRestaurantPort {
@@ -22,16 +23,49 @@ public class RestaurantJpaAdaptor implements UpdateRestaurantPort, LoadRestauran
     }
 
     @Override
-    public Optional<Restaurant> LoadBy(OwnerId ownerId) {
-        return Optional.empty();
+    public Optional<Restaurant> findByOwnerId(OwnerId ownerId) {
+        return restaurants.findByOwnerId(ownerId.id().toString())
+                .map(this::toDomain);
     }
 
     @Override
     public Restaurant addRestaurant(Restaurant restaurant) {
-        RestaurantJpaEntity restaurantJpaEntity = new RestaurantJpaEntity(
-                restaurant.getRestaurantId().id(), // UUID
-                restaurant.getOwnerId().id().toString(), // OwnerId flattened
-                restaurant.getOwnerId().name(),
+        restaurants.save(toJpaEntity(restaurant));
+        return restaurant;
+    }
+
+    @Override
+    public Restaurant updateRestaurant(Restaurant restaurant) {
+        return null;
+    }
+
+    private Restaurant toDomain(RestaurantJpaEntity entity) {
+        return new Restaurant(
+                new RestaurantId(entity.getId()),
+                new OwnerId(UUID.fromString(entity.getOwnerId()), entity.getOwnerName()),
+                entity.getName(),
+                new Address(
+                        entity.getStreet(),
+                        entity.getNumber(),
+                        entity.getPostalCode(),
+                        entity.getCity(),
+                        entity.getCountry()
+                ),
+                new EmailAddress(entity.getEmailAddress()),
+                entity.getPictures().stream()
+                        .map(Picture::new)
+                        .collect(Collectors.toList()),
+                entity.getCuisineType(),
+                new PrepTime(entity.getMinPrepTime(), entity.getMaxPrepTime()),
+                new OpeningHours(entity.getOpeningTime(), entity.getClosingTime(), entity.getOpenDays())
+        );
+    }
+
+    private RestaurantJpaEntity toJpaEntity(Restaurant restaurant) {
+        return new RestaurantJpaEntity(
+                restaurant.getRestaurantId().id(),                     // UUID
+                restaurant.getOwnerId().id().toString(),               // ownerId as String
+                restaurant.getOwnerId().name(),                        // ownerName
                 restaurant.getName(),
                 restaurant.getAddress().street(),
                 restaurant.getAddress().number(),
@@ -40,8 +74,8 @@ public class RestaurantJpaAdaptor implements UpdateRestaurantPort, LoadRestauran
                 restaurant.getAddress().country(),
                 restaurant.getEmailAddress().emailAddress(),
                 restaurant.getPictureList().stream()
-                        .map(Picture::url) // assuming Picture has a url() or getUrl()
-                        .toList(),
+                        .map(Picture::url)
+                        .collect(Collectors.toList()),
                 restaurant.getCuisineType(),
                 restaurant.getDefaultPrepTime().minTime(),
                 restaurant.getDefaultPrepTime().maxTime(),
@@ -49,12 +83,7 @@ public class RestaurantJpaAdaptor implements UpdateRestaurantPort, LoadRestauran
                 restaurant.getOpeningHours().closingTime(),
                 restaurant.getOpeningHours().openDays()
         );
-        RestaurantJpaEntity saved = this.restaurants.save(restaurantJpaEntity);
-        return restaurant;
     }
 
-    @Override
-    public Restaurant updateRestaurant(Restaurant restaurant) {
-        return null;
-    }
+
 }
